--- a/logstash/config/logstash.conf
+++ b/logstash/config/logstash.conf
@@ -2,14 +2,14 @@
 input {
   tcp {
     type => "syslog"
-    port => 5140
+    port => 5044
   }
 }
 # udp syslogs tream via 5140
 input {
   udp {
     type => "syslog"
-    port => 5140
+    port => 5044
   }
 }
 
@@ -79,7 +79,7 @@ if [prog] =~ /^filterlog$/ {
       add_tag => [ "GeoIP" ]
       source => "src_ip"
       # Optional GeoIP database
-      database => "/usr/share/GeoIP/GeoLiteCity.dat"
+      # database => "/usr/share/GeoIP/GeoLiteCity.dat"
     }
   }
 }
